--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -18,6 +18,7 @@ packages:
   - gnupg2
   - mkpasswd
   - wireguard-tools
+  - ncurses
   - podman buildah skopeo podman-compose slirp4netns
   - flatpak flatpak-builder
   - iwlax2xx-firmware
@@ -94,7 +95,6 @@ packages:
   - NetworkManager-config-connectivity-fedora
   - NetworkManager-wifi
   # - NetworkManager-wwan
-  - abattis-cantarell-fonts
   - acl
   # - adwaita-qt5
   - alsa-sof-firmware
@@ -124,9 +124,6 @@ packages:
   - cups-filters
   - curl
   - cyrus-sasl-plain
-  - dejavu-sans-fonts
-  - dejavu-sans-mono-fonts
-  - dejavu-serif-fonts
   # - dhcp-client
   # - dnsmasq
   - e2fsprogs
@@ -148,9 +145,22 @@ packages:
   - glx-utils
   - gnupg2
   - google-noto-emoji-color-fonts
+  - google-noto-naskh-arabic-vf-fonts
+  - google-noto-sans-armenian-vf-fonts
+  - google-noto-sans-canadian-aboriginal-vf-fonts
+  - google-noto-sans-cherokee-vf-fonts
   - google-noto-sans-cjk-ttc-fonts
-  - google-noto-sans-gurmukhi-fonts
+  - google-noto-sans-ethiopic-vf-fonts
+  - google-noto-sans-georgian-vf-fonts
+  - google-noto-sans-gurmukhi-vf-fonts
+  - google-noto-sans-hebrew-vf-fonts
+  - google-noto-sans-lao-vf-fonts
+  - google-noto-sans-math-vf-fonts
+  - google-noto-sans-mono-vf-fonts
   - google-noto-sans-sinhala-vf-fonts
+  - google-noto-sans-thaana-vf-fonts
+  - google-noto-sans-vf-fonts
+  - google-noto-serif-vf-fonts
   - gstreamer1-plugins-bad-free
   - gstreamer1-plugins-good
   - gstreamer1-plugins-ugly-free
@@ -170,8 +180,6 @@ packages:
   # - iptables
   - iptstate
   - iputils
-  - ipw2100-firmware
-  - ipw2200-firmware
   - iwl100-firmware
   - iwl1000-firmware
   - iwl105-firmware
@@ -208,6 +216,7 @@ packages:
   - lohit-devanagari-fonts
   - lohit-gujarati-fonts
   - lohit-kannada-fonts
+  - lohit-marathi-fonts
   - lohit-odia-fonts
   - lohit-tamil-fonts
   - lohit-telugu-fonts
@@ -218,7 +227,6 @@ packages:
   - mdadm
   - mesa-dri-drivers
   - mesa-vulkan-drivers
-  - mlocate
   - mpage
   - mtr
   # - nano
@@ -242,6 +250,7 @@ packages:
   - pipewire-gstreamer
   - pipewire-pulseaudio
   - pipewire-utils
+  - plocate
   # - plymouth-system-theme
   - policycoreutils
   # - policycoreutils-python-utils
@@ -254,6 +263,7 @@ packages:
   # - qt5-qtxmlpatterns
   - quota
   - realmd
+  - rit-meera-new-fonts
   - rootfiles
   - rpm
   - rsync
@@ -261,11 +271,9 @@ packages:
   - selinux-policy-targeted
   - setup
   - shadow-utils
-  - sil-abyssinica-fonts
   - sil-mingzat-fonts
   - sil-nuosu-fonts
   - sil-padauk-fonts
-  - smc-meera-fonts
   - sos
   - spice-vdagent
   - sssd
