--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -29,9 +29,9 @@ packages:
   - keepalived
   - cri-o cri-tools conntrack-tools kubelet
   ## Nonfree and dependencies
-  - kmod-nvidia xorg-x11-drv-nvidia-cuda
-  - vdpauinfo libva-vdpau-driver
+  - akmod-nvidia xorg-x11-drv-nvidia-cuda
+  - vdpauinfo libva-vdpau-driver libva-utils
   - nvidia-container-runtime
   - libva-intel-hybrid-driver libva-intel-driver
   ## Broadcom
-  # - kmod-wl
+  # - akmod-wl
