pull nvidia drivers from rawhide

--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -16,6 +16,7 @@ repos:
   - libnvidia-container
   - nvidia-container-runtime
   - brave-browser-beta
+  - rpmfusion-nonfree-rawhide
 
 packages:
   ## from fedora-common-ostree-pkgs.yaml
