--- a/builds/client/manifest.yaml
+++ b/builds/client/manifest.yaml
@@ -30,7 +30,7 @@ packages:
   - keepalived
   - cri-o cri-tools conntrack-tools kubelet
   ## Nonfree and dependencies
-  - akmod-nvidia xorg-x11-drv-nvidia-cuda xorg-x11-drv-nvidia-power
+  - akmod-nvidia xorg-x11-drv-nvidia-cuda
   - vdpauinfo libva-vdpau-driver libva-utils
   - nvidia-container-runtime
   - libva-intel-hybrid-driver libva-intel-driver
