tweak client packages

--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -14,12 +14,12 @@ packages:
   - nmap
   - strace
   - git-core
+  - hdparm
   - vim-enhanced
   - gnupg2
   - mkpasswd
   - wireguard-tools
-  - ncurses
-  - podman buildah skopeo podman-compose slirp4netns
+  - podman buildah skopeo podman-compose slirp4netns podman-plugins libvarlink-util
   - flatpak flatpak-builder
   - iwlax2xx-firmware
   - libva-utils vulkan vulkan-tools
