--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -268,7 +268,7 @@ packages:
   - rpm
   - rsync
   # - samba-client
-  - selinux-policy-targeted
+  # - selinux-policy-targeted
   - setup
   - shadow-utils
   - sil-mingzat-fonts
