--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -329,7 +329,7 @@ packages:
   # - gvfs-mtp
   # - gvfs-smb
   - libcanberra-gtk3
-  - libproxy-duktape
+  # - libproxy-duktape
   - librsvg2
   - libsane-hpaio
   - mesa-dri-drivers
