update overlay content

--- a/overlay.d/01custom/usr/lib/dracut/dracut.conf.d/coreos-omits.conf
+++ b/overlay.d/01custom/usr/lib/dracut/dracut.conf.d/coreos-omits.conf
@@ -8,7 +8,7 @@ omit_dracutmodules+=" nfs lvm iscsi dmraid "
 # More storage modules we don't use
 omit_dracutmodules+=" fcoe fcoe-uefi nbd "
 # We use NetworkManager
-omit_dracutmodules+=" network-legacy network-wicked "
+omit_dracutmodules+=" network-manager network-legacy network-wicked "
 # We use systemd network naming
 omit_dracutmodules+=" biosdevname "
 # Random stuff we don't want
