--- a/builds/client/nvidia-gpu.yaml
+++ b/builds/client/nvidia-gpu.yaml
@@ -10,3 +10,6 @@ packages:
   - akmod-nvidia xorg-x11-drv-nvidia-cuda
   - vdpauinfo libva-vdpau-driver
   - nvidia-container-runtime
+
+# ostree-layers:
+#   - overlay/02nvidia
