--- a/overlay.d/01custom/usr/lib/dracut/dracut.conf.d/coreos-omits.conf
+++ b/overlay.d/01custom/usr/lib/dracut/dracut.conf.d/coreos-omits.conf
@@ -13,3 +13,5 @@ omit_dracutmodules+=" network-manager network-legacy network-wicked "
 omit_dracutmodules+=" biosdevname "
 # Random stuff we don't want
 omit_dracutmodules+=" rngd busybox dbus-daemon memstrack pcsc bluetooth "
+
+dracutmodules+=" mkfs.xfs "
