--- a/builds/client/client.yaml
+++ b/builds/client/client.yaml
@@ -293,7 +293,7 @@ packages:
   - adobe-source-code-pro-fonts
   - at-spi2-atk
   - at-spi2-core
-  # - avahi
+  - avahi
   # - chrome-gnome-shell
   - dconf
   - fprintd-pam
@@ -321,10 +321,10 @@ packages:
   # - gvfs-afc
   # - gvfs-afp
   - gvfs-archive
-  # - gvfs-fuse
-  # - gvfs-goa
-  # - gvfs-gphoto2
-  # - gvfs-mtp
+  - gvfs-fuse
+  - gvfs-goa
+  - gvfs-gphoto2
+  - gvfs-mtp
   # - gvfs-smb
   - libcanberra-gtk3
   # - libproxy-duktape
