update dracut  modules

--- a/builds/client/overlay.d/02nvidia/usr/lib/dracut/dracut.conf.d/nvidia.conf
+++ b/builds/client/overlay.d/02nvidia/usr/lib/dracut/dracut.conf.d/nvidia.conf
@@ -1,2 +1,2 @@
-dracutmodules+=" nvidia nvidia_modeset nvidia_drm nvidia_uvm "
+add_dracutmodules+=" nvidia nvidia_modeset nvidia_drm nvidia_uvm "
 omit_dracutmodules+=" nouveau "
