--- a/builds/client/nvidia-gpu.yaml
+++ b/builds/client/nvidia-gpu.yaml
@@ -11,5 +11,5 @@ packages:
   - vdpauinfo libva-vdpau-driver
   - nvidia-container-runtime
 
-# ostree-layers:
-#   - overlay/02nvidia
+ostree-layers:
+  - overlay/02nvidia
