--- a/builds/client/image.yaml
+++ b/builds/client/image.yaml
@@ -5,6 +5,7 @@ size: 5
 extra-kargs:
   - elevator=noop
   - enforcing=0
+  - rfkill.default_state=1
 
 ignition-network-kcmdline: []
 ostree-remote: fedora
