--- a/builds/server/image.yaml
+++ b/builds/server/image.yaml
@@ -5,6 +5,7 @@ extra-kargs:
   - rd.neednet=1
   - ip=dhcp
   - enforcing=0
+  - coreos.no_persist_ip
   - rfkill.master_switch_mode=2
   - rfkill.default_state=1
 
