--- a/builds/client/client.yaml
+++ b/builds/client/client.yaml
@@ -8,9 +8,6 @@ rojig:
 
 default_target: graphical.target
 
-exclude-packages:
-  - perl-interpreter
-
 packages:
   - fedora-release-silverblue
   ## Custom
@@ -24,7 +21,7 @@ packages:
   - podman-compose
   - libva-utils vulkan vulkan-tools
   - kubectl
-  - qemu-kvm libvirtd
+  - libvirt-daemon-kvm libvirt-client virt-viewer
 
   ## from fedora-common-ostree.yaml
   - git-core
