--- a/base.yaml
+++ b/base.yaml
@@ -174,6 +174,7 @@ packages:
   - pciutils
   - ipvsadm
   - cri-o cri-tools conntrack-tools kubelet
+  - hdparm
 
 # This thing is crying out to be pulled into systemd, but that hasn't happened
 # yet.  Also we may want to add to rpm-ostree something like arch negation;
