--- a/overlay.d/01custom/usr/lib/dracut/dracut.conf.d/vfio.conf
+++ b/overlay.d/01custom/usr/lib/dracut/dracut.conf.d/vfio.conf
@@ -1,2 +1,1 @@
-add_dracutmodules+=" vfio "
-force_drivers+=" vfio vfio-pci vfio_iommu_type1 "
+add_drivers+=" vfio vfio_iommu_type1 vfio_pci vfio_virqfd "
