Remove default cni configs from packages

--- a/builds/server/server.yaml
+++ b/builds/server/server.yaml
@@ -8,6 +8,10 @@ rojig:
 
 default-target: multi-user.target
 
+remove-from-packages:
+  - [cri-o, /etc/cni/net.d/*.conf]
+  - [podman, /etc/cni/net.d/*.conf]
+
 remove-files:
   # We don't ship man(1) or info(1)
   - usr/share/info
