Remove keepalived, haproxy and conntrackd configs

--- a/base.yaml
+++ b/base.yaml
@@ -34,6 +34,9 @@ etc-group-members:
   - adm
   - wheel
 
+remove-from-packages:
+  - [conntrack-tools, /etc/conntrackd/conntrackd.conf]
+
 check-passwd:
   type: "file"
   filename: "manifests/passwd"
