--- a/builds/server/server.yaml
+++ b/builds/server/server.yaml
@@ -11,6 +11,8 @@ default-target: multi-user.target
 remove-from-packages:
   - [cri-o, /etc/cni/net.d/.*]
   - [podman, /etc/cni/net.d/.*]
+  - [keepalived, /etc/keepalived/keepalived.conf]
+  - [haproxy, /etc/haproxy/haproxy.cfg]
 
 remove-files:
   # We don't ship man(1) or info(1)
