--- a/base.yaml
+++ b/base.yaml
@@ -19,7 +19,7 @@ repos:
   - fedora-modular
   - fedora-updates-modular
   - kubernetes
-  - cri-o_1.24.0
+  - cri-o
 
 # Be minimal
 recommends: false
@@ -34,10 +34,6 @@ etc-group-members:
   - adm
   - wheel
 
-remove-from-packages:
-  - [conntrack-tools, /etc/conntrackd/conntrackd.conf]
-  - [cri-o, /etc/cni/net.d/.*]
-
 check-passwd:
   type: "file"
   filename: "manifests/passwd"
@@ -46,6 +42,10 @@ check-groups:
   filename: "manifests/group"
 
 rpmdb: sqlite
+
+remove-from-packages:
+  - [cri-o, /etc/cni/net.d/.*]
+  - [conntrack-tools, /etc/conntrackd/conntrackd.conf]
 
 packages:
   # system-configuration
@@ -93,16 +93,15 @@ packages:
 
   # custom
   - hostname
+  - ssh-key-dir
   - systemd-networkd
   - iproute-tc
   - nftables iptables-nft
-  - ldns-utils
   - socat
+  - ldns-utils
   - pciutils
-  - ipvsadm
-  - cri-o cri-tools conntrack-tools kubelet
   - hdparm
-  - ssh-key-dir
+  - cri-o cri-tools conntrack-tools kubelet ipvsadm
 
 packages-x86_64:
   - irqbalance
@@ -115,13 +114,13 @@ exclude-packages:
   - python
   - python2
   - python2-libs
-  # - python3
-  # - python3-libs
+  - python3
+  - python3-libs
   - perl
   # - perl-interpreter
   - nodejs
   - dnf
-  # - grubby
+  - grubby
   - cowsay
   - initscripts
   - plymouth
