--- a/client.yaml
+++ b/client.yaml
@@ -23,7 +23,6 @@ packages:
   - podman-compose
   - libva-utils vulkan vulkan-tools
   - kubectl
-  - libvirt-daemon-kvm libvirt-client virt-viewer qemu-guest-agent
 
   ## from fedora-common-ostree.yaml
   - git-core
@@ -322,26 +321,26 @@ packages:
   - gnome-terminal
   - gnome-terminal-nautilus
   # - gnome-themes-extra
-  - gnome-user-docs
+  # - gnome-user-docs
   # - gnome-user-share
   # - gvfs-afc
   # - gvfs-afp
   - gvfs-archive
   - gvfs-fuse
-  - gvfs-goa
-  - gvfs-gphoto2
-  - gvfs-mtp
+  # - gvfs-goa
+  # - gvfs-gphoto2
+  # - gvfs-mtp
   # - gvfs-smb
   - libcanberra-gtk3
-  # - libproxy-duktape
+  - libproxy-duktape
   - librsvg2
   - libsane-hpaio
   - mesa-dri-drivers
   - mesa-libEGL
   - nautilus
-  - orca
+  # - orca
   - polkit
-  # - rygel
+  - rygel
   - systemd-oomd-defaults
   - tracker
   - tracker-miners
@@ -349,7 +348,10 @@ packages:
   - xdg-desktop-portal-gnome
   - xdg-desktop-portal-gtk
   - xdg-user-dirs-gtk
-  - yelp
+  # - yelp
 
 packages-x86_64:
   - alsa-sof-firmware
+
+exclude-packages:
+  - perl-interpreter
