--- a/base.yaml
+++ b/base.yaml
@@ -114,8 +114,8 @@ exclude-packages:
   - python
   - python2
   - python2-libs
-  - python3
-  - python3-libs
+  # - python3
+  # - python3-libs
   - perl
   # - perl-interpreter
   - nodejs
