--- a/sunshine-server.yaml
+++ b/sunshine-server.yaml
@@ -1,7 +1,9 @@
 repos:
   - rpmfusion-free
   - rpmfusion-free-updates
+  - rpmfusion-free-rawhide
   - custom
 
 packages:
   - sunshine
+  - mesa-va-drivers-freeworld
