--- a/client.yaml
+++ b/client.yaml
@@ -22,6 +22,7 @@ packages:
   - podman-compose
   - libva-utils vulkan vulkan-tools
   - kubectl
+  - libvirt-daemon-kvm libvirt-client virt-viewer
 
   ## from fedora-common-ostree.yaml
   - git-core
@@ -219,7 +220,7 @@ packages:
   # - policycoreutils-python-utils
   - procps-ng
   - psmisc
-  # - qemu-guest-agent
+  - qemu-guest-agent
   # - qgnomeplatform-qt5
   # - qt5-qtbase
   # - qt5-qtbase-gui
@@ -262,7 +263,7 @@ packages:
   - usbutils
   - util-linux
   - vazirmatn-vf-fonts
-  # - vim-minimal
+  - vim-minimal
   - wget
   - which
   - whois
@@ -320,7 +321,7 @@ packages:
   - gnome-terminal
   - gnome-terminal-nautilus
   # - gnome-themes-extra
-  # - gnome-user-docs
+  - gnome-user-docs
   # - gnome-user-share
   # - gvfs-afc
   # - gvfs-afp
@@ -337,9 +338,9 @@ packages:
   - mesa-dri-drivers
   - mesa-libEGL
   - nautilus
-  # - orca
+  - orca
   - polkit
-  - rygel
+  # - rygel
   - systemd-oomd-defaults
   - tracker
   - tracker-miners
@@ -347,7 +348,7 @@ packages:
   - xdg-desktop-portal-gnome
   - xdg-desktop-portal-gtk
   - xdg-user-dirs-gtk
-  # - yelp
+  - yelp
 
 packages-x86_64:
   - alsa-sof-firmware
