update package lists

--- a/client.yaml
+++ b/client.yaml
@@ -233,7 +233,7 @@ packages:
   - rpm
   - rsync
   # - samba-client
-  # - selinux-policy-targeted
+  - selinux-policy-targeted
   - setup
   - shadow-utils
   - sil-mingzat-fonts
