--- a/client.yaml
+++ b/client.yaml
@@ -22,7 +22,6 @@ packages:
   - podman-compose
   - libva-utils vulkan vulkan-tools
   - kubectl
-  - libvirt-daemon-kvm libvirt-client virt-viewer
 
   ## from fedora-common-ostree.yaml
   - git-core
@@ -220,7 +219,7 @@ packages:
   # - policycoreutils-python-utils
   - procps-ng
   - psmisc
-  - qemu-guest-agent
+  # - qemu-guest-agent
   # - qgnomeplatform-qt5
   # - qt5-qtbase
   # - qt5-qtbase-gui
