--- a/server.yaml
+++ b/server.yaml
@@ -8,9 +8,6 @@ rojig:
 
 default-target: multi-user.target
 
-repos:
-  - cri-o
-
 remove-from-packages:
   - [cri-o, /etc/cni/net.d/.*]
   - [conntrack-tools, /etc/conntrackd/conntrackd.conf]
@@ -24,11 +21,13 @@ remove-files:
 
 packages:
   - fedora-release-coreos
+  - systemd-networkd
   - cri-o cri-tools conntrack-tools kubelet ipvsadm
   - iscsi-initiator-utils
   - keepalived
   - haproxy
 
 exclude-packages:
+  - NetworkManager
   - python3
   - python3-libs
