add gpu firmware for local login

--- a/base.yaml
+++ b/base.yaml
@@ -95,7 +95,8 @@ packages:
   - ldns-utils
   - pciutils
   - containernetworking-plugins
-  - hdparm
+  - amd-gpu-firmware
+  - intel-gpu-firmware
 
 packages-x86_64:
   - irqbalance
