remove elevator bootarg

--- a/image-silverblue.yaml
+++ b/image-silverblue.yaml
@@ -1,13 +1,15 @@
-size: 5
+size: 4
 
 extra-kargs:
-  - elevator=noop
   - intel_iommu=on
   - amd_iommu=on
   - iommu=pt
   - rd.driver.pre=vfio-pci
   - enforcing=0
   - coreos.no_persist_ip
+  - rd.driver.blacklist=nouveau
+  - modprobe.blacklist=nouveau
+  - nvidia_drm.modeset=1
 
 ignition-network-kcmdline: []
 ostree-remote: fedora
