--- a/server.yaml
+++ b/server.yaml
@@ -22,7 +22,7 @@ remove-files:
 packages:
   - fedora-release-coreos
   - systemd-networkd
-  - cri-o cri-tools conntrack-tools kubelet ipvsadm
+  - cri-o cri-tools conntrack-tools kubelet
   - iscsi-initiator-utils
   - keepalived
   - haproxy
