--- a/client.yaml
+++ b/client.yaml
@@ -343,6 +343,10 @@ packages:
   - slirp4netns podman-plugins aardvark-dns
   - libva-utils vulkan vulkan-tools
   - systemd-networkd
+  - tmux xclip
+  - kubectl helm
+  - nmap
+  - podman-compose
 
 packages-x86_64:
   - alsa-sof-firmware
