--- a/manifest-silverblue.yaml
+++ b/manifest-silverblue.yaml
@@ -4,7 +4,7 @@ include:
   # - nvidia-gpu.yaml
 
 packages:
-  - iw wireless-regdb wpa_supplicant
+  - iw wpa_supplicant
   - dymo-cups-drivers
   # - libva-intel-hybrid-driver libva-intel-driver
   ## Broadcom
