--- a/client.yaml
+++ b/client.yaml
@@ -311,13 +311,13 @@ packages:
   # - gnome-themes-extra
   - gnome-user-docs
   # - gnome-user-share
-  # - gvfs-afc
+  - gvfs-afc
   # - gvfs-afp
   - gvfs-archive
   - gvfs-fuse
-  # - gvfs-goa
-  # - gvfs-gphoto2
-  # - gvfs-mtp
+  - gvfs-goa
+  - gvfs-gphoto2
+  - gvfs-mtp
   # - gvfs-smb
   - libcanberra-gtk3
   - libproxy-duktape
